added some suff

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Assignment4)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Assignment4 main.cpp BarcodeBSTScanner.cpp BarcodeArrayScanner.cpp BinarySearchTree.h Item.h ClientProgram.h)
+add_executable(Assignment4 main.cpp BarcodeBSTScanner.cpp BarcodeArrayScanner.cpp BinarySearchTree.h Item.h ClientProgram.h HashNode.h LinkedList.h HashMap.cpp)
